--- a/package.json
+++ b/package.json
@@ -6,16 +6,28 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf .next out",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
-    "@types/react-router-dom": "^5.3.3",
+    "@prisma/client": "^6.14.0",
+    "@trpc/client": "^11.5.0",
+    "@trpc/next": "^11.5.0",
+    "@trpc/react-query": "^11.5.0",
+    "@trpc/server": "^11.5.0",
     "antd": "^5.27.0",
     "echarts": "^6.0.0",
     "next": "15.4.6",
+    "prisma": "^6.14.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "superjson": "^2.2.2",
+    "zod": "^4.1.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
